--- a/www/index.css
+++ b/www/index.css
@@ -1,4 +1,4 @@
-﻿@import url("https://fonts.googleapis.com/css?family=Roboto+Mono");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono");
     
 body {
   margin: 0;
