--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <title>Main Page -- kotya.tk</title>
-    <script src="walls.js"></script>
-    <script src="index.js"></script>
+    <script src="src/walls.js"></script>
+    <script src="src/index.js"></script>
   </head>
   <body>
     <div class="main">
@@ -37,13 +37,6 @@
  <a href="https://vk.com/piturd98">Sluchaynaya Kotya</a> (c) 
  Last update: Aug 2018 </pre>
       </div>
-<noscript>
-      <div class="logo-info" style="display:block;">
-        <pre>
- <a href="https://vk.com/piturd98">Sluchaynaya Kotya</a> (c) 
- Last update: Aug 2018 </pre>
-      </div>
-</noscript>
       <!-- CONTENT -->
       <div class="content">
         <canvas id="canvas">
