--- a/templates/zaripova.html
+++ b/templates/zaripova.html
@@ -9,10 +9,22 @@
     <script>
       (function(){
         function onload() {
-          const r = new Romanizer();
-          const page = {{ page }};
-          if (page < 10000 && page > 0) {
-            document.getElementById('chapter').innerHTML = 'Глава ' + r.convert(page);
+          const ref = document.getElementById('random-ref');
+          const tar = document.getElementById('textarea');
+          const cha = document.getElementById('chapter');
+          if (ref) {
+            ref.href = '?page=' + (1 + (Math.random() * 4999 | 0));
+          }
+          
+          const page = parseInt('{{ page }}');
+          if (!isNaN(page)) {
+            const r = new Romanizer();
+            if (page < 10000 && page > 0) {
+              cha.innerHTML = 'Глава ' + r.convert(page);
+            }
+            tar.value = page;
+          } else {
+            tar.value = 1;
           }
         }
         window.addEventListener('load', onload, false);
@@ -23,7 +35,7 @@
     <div class="header content">
       <img src="img/zaripova-logo.png"></img>
       <form method="get">
-        <input class="textarea" type="number" name="page" value="{{ page }}" />
+        <input class="textarea" type="text" name="page" id="textarea" />
         <input class="button" type="submit" value="Перейти">
       </form>
       <br>
@@ -34,13 +46,20 @@
         <h2>Введение</h2>
         <h1></h1>
         <p>
-          Привет. Этот сайт содержит в себе лекции по информатике, сгенерированные компьютером с помощью 
+          Привет, я -- Случайная Котя. Этот сайт содержит в себе лекции по информатике, сгенерированные компьютером с помощью 
           <a href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B5%D0%BF%D1%8C_%D0%9C%D0%B0%D1%80%D0%BA%D0%BE%D0%B2%D0%B0">
           цепей Маркова</a>. Программа, генерирующая текст, изначально была написана на Javascript, но после, для
           миграции на сторону сервера, была переведена на Python 3. Исходный код можно найти на
           <a href="https://github.com/sluchaynayakotya/markov-text-generator">GitHub</a> (ОСТОРОЖНО, быдлокод).
-          Как Вы могли заметить, для генерации текста используется реально существующий текст. Этот текст был взят из свободного доступа, и представляет из себя осмысленный набор выражений. Алгоритм генерации текста таков, что для генерации более
-          читабельного и оригинального текста, необходимо использовать такой текст, где объем различных слов минимален, тогда
+          Чтобы не терять время и сразу же поглядеть на плоды моих трудов, пожалуйста, нажмите <a id="random-ref">сюда</a>,
+          и вы перейдете на случайную страницу этой замечательной лекции.
+          Кстати говоря, на этом сайте содержится бесконечная череда текста. Ну, по крайней мере, текст здесь потенциально бесконечен.
+          Все это благодаря тому, что весь текст генерируется при помощи компьютера. Текст генерируется случайно, однако страницы
+          на этом сайте всегда статичны, т. е. перейдя к главе <a href="?page=666">666</a>, вы всегда будете видеть один и тот же
+          текст. Круто, да?
+          Вы, наверное, уже заметили, что для генерации текста используется реально существующий текст. Этот текст был взят из
+          свободного доступа, и представляет из себя осмысленный набор выражений. Алгоритм генерации текста таков, что для генерации
+          более читабельного и оригинального текста, необходимо использовать такой текст, где объем различных слов минимален, тогда
           как объем выражений, составленных из этих слов, максимален. Для этого идеально подходят рефераты на около-технические
           темы, например, "информатика", "информация", "данные" и т. д. Алгоритм не занимается морфологическим
           анализом текста, и потому генерирующийся текст полностью зависит от слов и выражений в той форме, в которой они были
@@ -66,8 +85,6 @@
           имеет отношения к цепям Маркова, и не представляет особого интереса. Грубо говоря, алгоритм реализует случайный
           перебор слов с соответствующими окончаниями по несложной логике, чтобы имитировать псевдо-осмысленные названия для глав.
           Генерация заголовков случайная, и не связана с текстом самих лекций.
-          <br><br>
-          -- Случайная Котя
         </p>
       {% else %}
         <h2 id="chapter">Глава {{ page }}</h2>
