--- a/templates/zaripova.html
+++ b/templates/zaripova.html
@@ -65,7 +65,8 @@
           анализом текста, и потому генерирующийся текст полностью зависит от слов и выражений в той форме, в которой они были
           из начально представлены в оригинальном тексте (имеется в виду сохранение падежей, склонений, и т. д.)
           Для того, чтобы воспользоваться генератором, можно использовать форму в левом правом углу страницы. Написав номер
-          главы, можно попасть на нужную вам страницу. Чтобы попасть на эту страницу, достаточно оставить форму ввода пустой.
+          главы, можно попасть на нужную вам страницу. Чтобы попасть на страницу "Введение", на которой вы находитесь сейчас,
+          достаточно оставить форму ввода пустой.
           Далее идет техническое описание. Я считаю нужным предупредить о том, что оно может быть сложным для восприятия.
           Для большей информации смотрите исходный код программы на гитхабе или пишите мне на почту. Почту можно найти
           в исходном коде программы, в тексте лицензии. Также меня можно найти во <a href="https://vk.com/piturd98">Вконтакте</a>.
