--- a/templates/zaripova.html
+++ b/templates/zaripova.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <!--<meta name="viewport" content="width=device-width,initial-scale=1" />-->
     <link rel="stylesheet" type="text/css" href="css/zaripova.css">
     <title>Zaripova Generator -- kotya.tk</title>
     <script src="src/romanizer.js"></script>
