--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,9 @@
                |___/                  
         </pre>
       </div>
+      <div class="logo-text logo-small-text">
+        KOTYA.TK
+      </div>
       <div class="logo-cat">
         
       </div>
