--- a/templates/tetra.html
+++ b/templates/tetra.html
@@ -11,11 +11,17 @@
     <script src="js/px/utils.js"></script>
     <script src="js/px/rotating-box.js"></script>
     <script src="js/px/flying-figure.js"></script>
+    <script src="js/px/golem-city.js"></script>
+    <script src="js/px/creature.js"></script>
+    <script src="js/px/platform.js"></script>
+    <script src="js/px/wall.js"></script>
+    <script src="js/px/canvas.js"></script>
     <script src="js/index.js"></script>
 
   </head>
   
   <body>
+    <canvas class="canvas"></canvas>
     <canvas class="canvas"></canvas>
   </body>
 
