--- a/_templates/matrices_www/css/index.css
+++ b/_templates/matrices_www/css/index.css
@@ -1,13 +1,3 @@
-
-.err-msg {
-  color: red;
-}
-
-.matrices {
-  display: flex;
-  align-items: center;
-}
-
-.values {
-  width: 40px;
-}
+.matrices { display: flex; align-items: center; }
+.err-msg { color: red; }
+.values { width: 40px; }
