--- a/_templates/index/css/index.css
+++ b/_templates/index/css/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Mono");
 
 body {
-  background-color: #0e2028;
+  background-color: #1C1C1C;
   font-family: "Roboto Mono";
   font-size: 10px;
   padding: 0;
@@ -16,8 +16,7 @@ a {
 }
 
 .main {
-  #background-color: #0f2833;
-  background-color: #0e2028;
+  background-color: #1C1C1C;
   transform: translate(-50%, 0);
   position: absolute;
   width: 640px;
@@ -25,8 +24,8 @@ a {
 }
 
 .content {
-  animation-duration: 2s;
-  animation-name: miracle;
+  #animation-duration: 2s;
+  #animation-name: miracle;
   text-align: justify;
   font-size: 12px;
   position: absolute;
@@ -53,17 +52,7 @@ a {
 
 .proj-disc {
   margin: 0 0 0 10px;
-}
-
-.proj-emoji {
-  #width: 18px;
-  #height: 18px;
-  background-color: #111;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  #font-size: 100%;
+  font-style: italic;
 }
 
 @keyframes miracle {
