--- a/_templates/www_valentine/css/index.css
+++ b/_templates/www_valentine/css/index.css
@@ -12,3 +12,19 @@ canvas {
   transform: translate(-50%, -50%);
   image-rendering: pixelated;
 }
+
+.values {
+  float: right;
+  text-align: left;
+  width: 150px;
+}
+
+.justify {
+  text-align: justify;
+}
+
+.justify:after {
+  content: "";
+  display: inline-block;
+  width: 100%;
+}
